# shkolo-cli

./: .gitignore  Cargo.toml  README.md  SKILL.md  api-schema.md  shkolo-cli.py
.cargo/: config.toml
.github/workflows/: build.yml
src/: i18n.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/cache/: mod.rs  store.rs
src/models/: absence.rs  feedback.rs  grade.rs  homework.rs  message.rs  mod.rs  notification.rs  schedule.rs  student.rs
src/tui/: app.rs  handlers.rs  mod.rs  ui.rs
