[package]
name = "shkolo"
version = "0.1.0"
edition = "2021"
description = "CLI for Shkolo.bg - Bulgarian school management system"
authors = ["Shkolo CLI"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }

# TUI
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }

# Config and paths
directories = "5"
toml = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async utilities
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Password input
rpassword = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
