[package]
name = "shkolo"
version = "0.1.0"
edition = "2021"
description = "CLI for Shkolo.bg - Bulgarian school management system"
authors = ["Shkolo CLI"]

[dependencies]
# Async runtime (only features we actually use)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP client (rustls for cross-platform builds without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }

# TUI
ratatui = "0.28"
crossterm = { version = "0.27", features = ["event-stream"] }

# Config and paths
directories = "5"
toml = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Async utilities
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Password input
rpassword = "7"

# Fast dev builds
[profile.dev]
opt-level = 0
debug = 1          # Limited debug info (faster)

# Fast release builds for development (use this with: cargo build --release)
[profile.release]
opt-level = 3
lto = "thin"       # Much faster than full LTO, still good optimization
codegen-units = 16 # Parallel compilation
strip = true

# Slow but smallest/fastest binary (use: cargo build --profile dist)
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
